# skypro-test-work

./: README.md  main.py  pyproject.toml
myapi/: db.sqlite3
myapi/api/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
myapi/api/migrations/: 0001_initial.py
myapi/api/tests/: test_get_resume.py  test_patch_resume.py
myapi/myapi/: settings.py  urls.py
